# weather-telegram-bot

./: .gitignore  Makefile  README.md  bot.py  pyproject.toml  weather_api.py
handlers/: handlers.py  weather_handlers.py
keyboards/: keyboard.py
