[tool.poetry]
name = "weather-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Yuriy Y <monkcrazy91@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
